@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-16T00:37:44Z",
-  "count_outdated" : 473,
-  "uniques_outdated" : 302,
+  "timestamp" : "2024-01-21T08:09:40Z",
+  "count_outdated" : 476,
+  "uniques_outdated" : 305,
   "count" : 480,
   "uniques" : 309,
   "clones" : [
-    {
-      "timestamp": "2024-01-07T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
     {
       "timestamp": "2024-01-08T00:00:00Z",
       "count": 1,
