@@ -1,3 +1,12 @@
+2024-01-21T08:09:40Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7599942653 # 43
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-21
+* notice: last 14d: unq all: 4 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 302 473 / 309 480
+* notice: next accum: outdated-unq outdated-all / unq all: 305 476 / 309 480
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-01-07] / []
+
 2024-01-16T00:37:44Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7535449068 # 27
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-16
